--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Ángel's notes
-email: your-email@example.com
+email: anlorogel@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal blog for resuming my notes in the study of robotics and mechatronics.
+
 baseurl: "angel_blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
